--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.8",
+    "gsap": "^3.14.2",
+    "lenis": "^1.3.17",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.11.0",
+    "react-scroll": "^1.9.3",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
